// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sould correctly render ExpenseSummary with 1 item 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`sould correctly render ExpenseSummary with 1 item 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,232.12
  </h1>
</div>
`;
